# weatherdl

./: .gitignore  LICENSE  README.md  config.json  pyproject.toml  requirements-build.txt  requirements-dev.txt  requirements-prod.txt  requirements.txt  temp-requirements.txt
.github/workflows/: build-macos.yml  build-ubuntu.yml  build-windows.yml  build.yml  check.yml  ci.yml  release.yml  test-releases.yml  test.yml
doc/: README.md
docs/: CONTRIBUTING.md  README.md  configuration.md
src/: application_config.py  briefing.py  downloader.py  getMetUrl.py  main.py  presentation.py  utils.py  weatherdl.py
tests/: context.py  main_test.py  test_config_path_resolution.py  unused_file_name_like_test.py
tests/fixtures/: config.json
