[project]
name = "weatherdl"
version = "1.0.0"
description = "Weather download tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pillow==11.3.0",
    "xlsxwriter==3.2.9",
    "filetype==1.2.0",
    "python-pptx==1.0.2",
    "pytz==2025.2",
    "requests==2.32.5",
    "lxml==6.0.1",
    "certifi==2025.10.5",
    "charset-normalizer==3.4.3",
    "idna==3.10",
    "urllib3==2.5.0",
]

[project.optional-dependencies]
dev = [
    "black==25.9.0",
    "pylint==3.3.2",
    "pytest==8.4.2",
    "isort==5.13.2",
    "autopep8==2.3.2",
]
build = [
    "pyinstaller==6.16.0",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = "src"

[tool.pylint.'tests/*.py']
disable = ["import-error", "missing-function-docstring", "missing-module-docstring"]
